--- a/Lecture 04/main.html
+++ b/Lecture 04/main.html
@@ -8,14 +8,14 @@
     <script>
         function clickEvent()
         {
-            alert(" 음하하");
+            alert("인생..");
         }
 
     </script>
 </head>
 <body>
     <div style="width: 150px;height: 300px; background-color: aliceblue;">
-        <p onclick="clickEvent()">이은석 교수님</p>
+        <p onclick="clickEvent()">표승현</p>
     </div>
 </body>
 </html>
