--- a/10w_클래스다이어그램, 흐름도/index.html
+++ b/10w_클래스다이어그램, 흐름도/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <center>
-        <canvas width="640" height="480" id="game"> </canvas>
-    </center>
-    <script src="canvasgame.js"></script>
+    <canvas id="main_canvas" width="600" height="600" ></canvas>
+    <script src="main.js"></script>
 </body>
 </html>
